# moorenew

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  dist-workspace.toml  flake.nix  justfile  oranda.json
.forgejo/workflows/: build_deb.yaml  release_deb.yaml
.github/workflows/: prerelease.yaml  release.yml  web.yml
builds/: moorenew_aarch64
docs/: SUMMARY.md  book.toml  configuration.md  index.md  installation.md  plausible.js  running.md  service.md  setup.md  troubleshooting.md
docs/book/: 404.html  configuration.html  index.html  installation.html  oranda-highlight.css  plausible.js  print.html  running.html  searchindex.js  searchindex.json  service.html  setup.html  troubleshooting.html
docs/book/css/: chrome.css  variables.css
src/: args.rs  main.rs  system.rs  utils.rs
src/system/: service.rs  serviceproviders.rs  services.rs  sysinfo.rs
src/utils/: certificates.rs  config.rs  errors.rs  fileext.rs  hashes.rs  logging.rs  mod.rs  sftp.rs  ssh.rs  sshkeygen.rs  sysinfo.rs
src/utils/configuration/: configuration.rs  mod.rs
tests/: file1.txt  file3.txt
