[package]
name = "moorenew"
version = "0.1.0"
authors = ["philxws692"]
edition = "2024"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
sha2 = "0.10.9"
ssh2 = "0.9.5"
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = "2.5.4"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
thiserror = "2.0.12"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
edit = "0.1.5"

[package.metadata.deb]
extended-description = """\
A simple service in order to update your mailcow certificates
from a remote location like Nginx Proxy Manager.
"""
section = "utility"
copyright = "2025, philslr"
depends = "libssl3"
