[package]
name = "moorenew"
version = "1.1.0"
authors = ["philxws692"]
edition = "2024"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
ssh2 = "0.9"
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22"
thiserror = "2.0"
toml = "0.8"
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
edit = "0.1"
tracing-appender = "0.2"

[package.metadata.deb]
extended-description = """\
A simple service in order to update your mailcow certificates
from a remote location like Nginx Proxy Manager.
"""
section = "utility"
copyright = "2025, philslr"
depends = "libssl3"
